@@ -1,3 +1,8 @@
+2009-01-15 Rodrigo Kumpera  <rkumpera@novell.com>
+
+	* gen-md-tests.c: Add pe-optional-heaver var.
+	Improve debugging messages. 
+
 2009-01-14 Rodrigo Kumpera  <rkumpera@novell.com>
 
 	* gen-md-tests.c: Improve debugging.
